--- a/blog/django_admin/templates/actions.html
+++ b/blog/django_admin/templates/actions.html
@@ -1,6 +1,6 @@
 <label for="action_select">Actions:</label>
-<select name="action" id="action_select" class="custom-select" style="width: 15%;">
-    <option selected>------------</option>
+<select name="action" id="action_select" class="custom-select" style="width: 200px;">
+    <option selected disabled>------------</option>
     <option value="delete_selected">Delete selected</option>
 </select>
 <button type="submit" class="btn btn-secondary">Go</button>
