--- a/blog/user_app/templates/registration/registration.html
+++ b/blog/user_app/templates/registration/registration.html
@@ -27,8 +27,8 @@
             <div class="col">
                 <div class="form-floating">
                     <input type="email" class="form-control" id="floatingEmail" placeholder="name@example.com"
-                           name="email" value="{{ form.data.email }}" required>
-                    <label for="floatingEmail">Email</label>
+                           name="email" value="{{ form.data.email }}">
+                    <label for="floatingEmail">Email (Optional)</label>
                 </div>
             </div>
         </div>
