--- a/blog/django_admin/templates/admin_base.html
+++ b/blog/django_admin/templates/admin_base.html
@@ -44,10 +44,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     <i class="fas fa-search"></i>
                 </a>
                 <div class="navbar-search-block">
-                    <form class="form-inline">
+                    <form class="form-inline" action="{% url 'django_admin:search_admin' %}" method="get">
+                        {% csrf_token %}
                         <div class="input-group input-group-sm">
                             <input class="form-control form-control-navbar" type="search" placeholder="Search"
-                                   aria-label="Search">
+                                   aria-label="Search" name="query">
                             <div class="input-group-append">
                                 <button class="btn btn-navbar" type="submit">
                                     <i class="fas fa-search"></i>
